:bug: resolve bug in mobile align

--- a/css/style.css
+++ b/css/style.css
@@ -1684,7 +1684,7 @@ a:hover {
 =====================================*/
 .contribuitors-area {
   text-align: center;
-  padding: 30px 50px;
+  padding: 50px 0px;
 }
 
 /*===================================
